# url-shortener-py

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py
src/controllers/: redirect_controller.py  url_controller.py
src/infrastructure/config/: __init__.py  envs.py  key_import.py
src/infrastructure/factories/: repository_factories.py  service_factories.py  singleton_factories.py
src/infrastructure/persistence/: memory_url_mapping_repository.py  mock_url_safety_validation_repository.py  url_mapping_repository_factory.py  url_safety_repository_factory.py
src/infrastructure/persistence/redis/: r_credentials.py  redis_client.py  redis_url_mapping_repository.py  redis_url_safety_cache.py
src/models/: url_mapping.py
src/models/repositories/: url_mapping_repository.py
src/public/templates/: error.html  index.html  redirection_confirmation.html  shortened.html  template.html
src/repositories/: url_mapping_repository.py  url_safety_status_repository.py  url_safety_validation_repository.py
src/routes/: routes.py
src/services/: decorators.py  url_shortening_service.py  url_validation_service.py
src/services/utils/: service_errors.py  slug_generation_strategy.py
