[project]
name = "urlshortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.3",
    "pycryptodome>=3.23.0",
    "redis>=6.1.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.12.9",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 90

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.mypy]
mypy_path = "src"
